test/compilable/test74.d
module test74;

import imports.test74;

void baz()
{
    foo!() f;
}
